--- a/swarm/swarm.yaml
+++ b/swarm/swarm.yaml
@@ -5,7 +5,10 @@ services:
   visualizer:
     image: dockersamples/visualizer:stable
     ports:
-      - "8888:8080"
+      - target: 8080
+        published: 8888
+        protocol: tcp
+        mode: host
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
     deploy:
@@ -19,7 +22,10 @@ services:
   leare-gateway:
     image: northamerica-northeast1-docker.pkg.dev/mystic-tempo-416400/leare/apigateway-leare-gateway:gcp
     ports:
-      - "5555:5555"
+      - target: 5555
+        published: 5555
+        protocol: tcp
+        mode: host
     volumes:
       - gateway_logs:/app/logs
     deploy:
