--- a/privateDocker-compose.yaml
+++ b/privateDocker-compose.yaml
@@ -1,6 +1,16 @@
 version: '3.8'
 
 services:
+  #movil-proxy
+  movil-proxy:
+    build:
+      context: ../leare_proxy_movil
+      dockerfile: Dockerfile
+    ports:
+      - "80:80"
+      - "443:443"
+    networks:
+      - leare-network
   # Gateway
   leare-gateway:
     build:
@@ -140,7 +150,7 @@ services:
       - services=s3
       - DEBUG=${DEBUG:-0}
     volumes:
-      - "file_storage_data:/var/lib/localstack"
+      - file_storage_data:/var/lib/localstack
       - "/var/run/docker.sock:/var/run/docker.sock"
     networks:
       - leare-network
@@ -271,7 +281,6 @@ volumes:
     driver: local
   file_storage_data:
     driver: local
-
 
 networks:
   leare-network:
