--- a/swarm/small.yaml
+++ b/swarm/small.yaml
@@ -8,13 +8,14 @@ services:
       - target: 8080
         published: 8888
         protocol: tcp
-        mode: host
+        mode: ingress
     volumes:
       - "/var/run/docker.sock:/var/run/docker.sock"
     deploy:
       placement:
         constraints:
           - node.role == manager
+    hostname: visualizer
     networks:
       - leare-network
 
@@ -25,7 +26,7 @@ services:
       - target: 5555
         published: 5555
         protocol: tcp
-        mode: host
+        mode: ingress
     volumes:
       - gateway_logs:/app/logs
     deploy:
@@ -34,6 +35,7 @@ services:
         constraints:
           - node.labels.rack == leare-gateway
           - node.role == manager
+    hostname: leare-gateway
     networks:
       - leare-network
  
@@ -53,6 +55,12 @@ services:
       placement:
         constraints:
           - node.labels.rack == leare-db
+    ports:
+      - target: 5490
+        published: 5490
+        protocol: tcp
+        mode: ingress
+    hostname: courses-db
     networks:
       - leare-network
 
@@ -69,6 +77,12 @@ services:
       placement:
         constraints:
           - node.labels.rack == leare-ms
+    ports:
+      - target: 3003
+        published: 3003
+        protocol: tcp
+        mode: ingress
+    hostname: courses-web
     networks:
       - leare-network
 
