--- a/swarm/swarm.yaml
+++ b/swarm/swarm.yaml
@@ -72,6 +72,24 @@ services:
           - node.role == manager
     networks:
       - leare-network
+
+    
+  phpldapadmin:
+    image: osixia/phpldapadmin:latest
+    environment:
+      PHPLDAPADMIN_LDAP_HOSTS: "leare-ldap"
+      PHPLDAPADMIN_HTTPS: "false"
+    ports:
+      - "8085:80"
+    depends_on:
+      - leare-ldap
+    deploy:
+      replicas: 1
+      placement:
+        constraints:
+          - node.labels.rack == leare-gateway
+    networks:
+      - leare-network
  
  #MARK: leare-db
 
@@ -226,6 +244,48 @@ services:
       - leare-network
 
 
+  leare-ldap:
+    image: osixia/openldap:1.1.8
+    environment:
+      COMPOSE_HTTP_TIMEOUT: 200
+      LDAP_LOG_LEVEL: "256"
+      LDAP_ORGANISATION: "Leare"
+      LDAP_DOMAIN: "leare.co"
+      LDAP_BASE_DN: ""
+      LDAP_ADMIN_PASSWORD: "admin"
+      LDAP_CONFIG_PASSWORD: "config"
+      LDAP_READONLY_USER: "false"
+      LDAP_BACKEND: "hdb"
+      LDAP_TLS: "true"
+      LDAP_TLS_CRT_FILENAME: "ldap.crt"
+      LDAP_TLS_KEY_FILENAME: "ldap.key"
+      LDAP_TLS_CA_CRT_FILENAME: "ca.crt"
+      LDAP_TLS_ENFORCE: "false"
+      LDAP_TLS_CIPHER_SUITE: "SECURE256:-VERS-SSL3.0"
+      LDAP_TLS_PROTOCOL_MIN: "3.1"
+      LDAP_TLS_VERIFY_CLIENT: "demand"
+      LDAP_REPLICATION: "false"
+      LDAP_REMOVE_CONFIG_AFTER_SETUP: "true"
+      LDAP_SSL_HELPER_PREFIX: "ldap"
+    tty: true
+    stdin_open: true
+    volumes:
+      - /var/lib/ldap
+      - /etc/ldap/slapd.d
+      - /container/service/slapd/assets/certs/
+    ports:
+      - "389:389"
+      - "636:636"
+    hostname: "leare.co"
+    deploy:
+      replicas: 1
+      placement:
+        constraints:
+          - node.labels.rack == leare-db
+    networks:
+      - leare-network
+  
+
  #MARK: leare-ms
   
  # auth_ms
@@ -273,8 +333,8 @@ services:
   document-server:
     image: northamerica-northeast1-docker.pkg.dev/mystic-tempo-416400/leare/apigateway-document-server:gcp
     # command: "mkdir temp && mkdir logs"
-    # volumes:
-    #   - document_temp:/temp
+    volumes:
+      - document_temp:/temp
     #   - document_logs:/logs
     depends_on:
       - document-db
@@ -289,8 +349,8 @@ services:
   document-sidecar:
     image: northamerica-northeast1-docker.pkg.dev/mystic-tempo-416400/leare/apigateway-document-sidecar:gcp
     # command: "mkdir temp && mkdir logs"
-    # volumes:
-    #   - document_temp:/temp
+    volumes:
+      - document_temp:/temp
     #   - document_logs:/logs
     depends_on:
       - document-db
@@ -363,10 +423,15 @@ volumes:
   users_data:
     driver: local
   document_temp:
-    driver: local
-  document_logs:
-    driver: local
-    
+    driver_opts:
+      type: nfs
+      o: addr=35.203.64.5,rw
+      device: ":/leare_document_ms/temp"
+  # document_logs:
+  #   driver_opts:
+  #     type: nfs
+  #     o: addr=nfs-server-ip,rw
+  #     device: ":/path/to/document_logs"  
 
 
 networks:
