--- a/privateDocker-compose.yaml
+++ b/privateDocker-compose.yaml
@@ -26,7 +26,9 @@ services:
   # auth_ms
 
   auth-db:
-    image: mcr.microsoft.com/mssql/server:2022-latest
+    build:
+      context: ../leare_auth_ms
+      dockerfile: db.Dockerfile
     user: root
     volumes:
       - ../db/leare_auth_db:/var/opt/mssql/data
