--- a/privateDocker-compose.yaml
+++ b/privateDocker-compose.yaml
@@ -321,6 +321,25 @@ services:
     networks:
         - leare-network
 
+  int-rp:
+    build:
+      context: ../leare_int
+      dockerfile: Dockerfile.nginx
+    ports:
+      - "3048:3048"
+      - "3047:3047"
+    networks:
+      - leare-network
+
+  leare-int:
+    build:
+      context: ../leare_int
+      dockerfile: Dockerfile
+    ports:
+      - "5000:5000"
+    networks:
+      - leare-network
+
 volumes:
   esdata1:
     driver: local
