--- a/swarm/swarm.yaml
+++ b/swarm/swarm.yaml
@@ -5,8 +5,14 @@ services:
   movil-proxy:
     image: northamerica-northeast1-docker.pkg.dev/mystic-tempo-416400/leare/apigateway-movil-proxy:gcp
     ports:
-      - "80:80"
-      - "443:443"
+      - target: 80
+        published: 80
+        protocol: tcp
+        mode: host
+      - target: 443
+        published: 443
+        protocol: tcp
+        mode: host
     deploy:
       replicas: 1
       placement:
@@ -40,7 +46,7 @@ services:
       - target: 5555
         published: 5555
         protocol: tcp
-        mode: ingress
+        mode: host
     volumes:
       - gateway_logs:/app/logs
     deploy:
@@ -59,7 +65,7 @@ services:
       - target: 8001
         published: 8001
         protocol: tcp
-        mode: ingress
+        mode: host
     environment:
       CHAT_MS_URL: "http://chat-web:3002"
     depends_on:
@@ -90,7 +96,28 @@ services:
           - node.labels.rack == leare-gateway
     networks:
       - leare-network
- 
+  #MARK: front
+  front:
+    image: northamerica-northeast1-docker.pkg.dev/mystic-tempo-416400/leare/front:gcp
+    ports:
+      - target: 80
+        published: 80
+        protocol: tcp
+        mode: host
+      - target: 443
+        published: 443
+        protocol: tcp
+        mode: host
+    deploy:
+      replicas: 1
+      placement:
+        constraints:
+          - node.labels.rack == leare-front
+    networks:
+      - leare-network
+
+
+
  #MARK: leare-db
 
  # auth_ms
@@ -442,10 +469,7 @@ volumes:
   ldap_data_3:
     driver: local
   document_temp:
-    driver_opts:
-      type: nfs
-      o: addr=35.203.64.5,rw
-      device: ":/leare_document_ms/temp"
+    external: true
   # document_logs:
   #   driver_opts:
   #     type: nfs
