--- a/config/nginx.conf
+++ b/config/nginx.conf
@@ -8,8 +8,8 @@ server {
 	ssl_certificate_key /etc/nginx/ssl/key-pair.pem;
 
 	upstream gateway {
-		server <gateway-ip>:<gateway-port> weight=2;
-		server <gateway-ip>:<gateway-port> weight=8;
+		server 35.215.49.238:5555 weight=2;
+		server 35.215.45.12:5555 weight=8;
 	}
 
 	location / {
