final master master and nfs

--- a/swarm/newCourses.yaml
+++ b/swarm/newCourses.yaml
@@ -12,5 +12,7 @@ services:
       placement:
         constraints:
           - node.labels.rack == leare-db
+        preferences:
+            - spread: node.id
     networks:
       - leare-network
